After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 726813 - Autologin is broken
Autologin is broken
Status: RESOLVED FIXED
Product: gdm
Classification: Core
Component: general
3.11.x
Other Linux
: Normal major
: ---
Assigned To: GDM maintainers
GDM maintainers
Depends on:
Blocks:
 
 
Reported: 2014-03-21 10:51 UTC by Vadim Rutkovsky
Modified: 2014-03-21 20:01 UTC
See Also:
GNOME target: 3.12
GNOME version: ---


Attachments
manager: wait until autologin is initiated before marking it so (5.34 KB, patch)
2014-03-21 16:37 UTC, Ray Strode [halfline]
committed Details | Review
manger: rename touch_marker_file to touch_ran_once_marker_file (4.69 KB, patch)
2014-03-21 16:50 UTC, Ray Strode [halfline]
committed Details | Review

Description Vadim Rutkovsky 2014-03-21 10:51:28 UTC
AutologinLogin is broken on https://git.gnome.org/browse/gdm/commit/?id=9f0402c0
(3.11.92.1) - Gnome-shell is throwing an exception:

Gjs-Message: JS LOG: GNOME Shell started at Fri Mar 21 2014 10:46:39 GMT+0000 (G
(gnome-shell:1384): Gjs-WARNING **: JS ERROR: Exception in callback for signal: startup-prepared: Gio.DBusError: GDBus.Error:org.freedesktop.DBus.Error.UnknownMethod: Method OpenSession is not implemented on interface org.gnome.DisplayManager.Manager
LoginDialog<._init@resource:///org/gnome/shell/gdm/loginDialog.js:375
wrapper@resource:///org/gnome/gjs/modules/lang.js:169
_Base.prototype._construct@resource:///org/gnome/gjs/modules/lang.js:110
Class.prototype._construct/newClass@resource:///org/gnome/gjs/modules/lang.js:20
ScreenShield<._ensureUnlockDialog@resource:///org/gnome/shell/ui/screenShield.js:919
wrapper@resource:///org/gnome/gjs/modules/lang.js:169
ScreenShield<.showDialog@resource:///org/gnome/shell/ui/screenShield.js:919
wrapper@resource:///org/gnome/gjs/modules/lang.js:169
_initializeUI/<@resource:///org/gnome/shell/ui/main.js:208
_emit@resource:///org/gnome/gjs/modules/signals.js:124
LayoutManager<._prepareStartupAnimation@resource:///org/gnome/shell/ui/layout.js
wrapper@resource:///org/gnome/gjs/modules/lang.js:169
LayoutManager<._loadBackground/signalId<@resource:///org/gnome/shell/ui/layout.j
_emit@resource:///org/gnome/gjs/modules/signals.js:124
SystemBackground<._init/<.onFinished<@resource:///org/gnome/shell/ui/background.
BackgroundCache<._loadImageContent/<@resource:///org/gnome/shell/ui/background.j
Comment 1 Ray Strode [halfline] 2014-03-21 16:37:25 UTC
Created attachment 272574 [details] [review]
manager: wait until autologin is initiated before marking it so

When the slave was merged to the main daemon process, the code for
doing autologin accounting was accidentally moved earlier in the
autologin process.  This caused the greeter to create a login
screen and do autologin at the same time.

This commit defers the accounting until after the operation is
fully initiated.
Comment 2 Ray Strode [halfline] 2014-03-21 16:50:04 UTC
Created attachment 272577 [details] [review]
manger: rename touch_marker_file to touch_ran_once_marker_file

Rename this function to be more descriptive after some discussion
with Matthias.
Comment 3 Ray Strode [halfline] 2014-03-21 16:50:21 UTC
Attachment 272574 [details] pushed as 7140b96 - manager: wait until autologin is initiated before marking it so
Attachment 272577 [details] pushed as ce94f53 - manger: rename touch_marker_file to touch_ran_once_marker_file
Comment 4 Vadim Rutkovsky 2014-03-21 20:01:12 UTC
Thanks, fixed in master